--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<h2>YANLIN CHEN's PORTFOLIO</h2>
+							<p>I made this website to share my ideas of Data Science, Machine Learning, Cyber Security.</p>
+								
+							<p>You can also check out my <a href="http://html5up.net">MEDIUM</a> PAGE</p> 
 						</div>
 					</section>
 
@@ -57,8 +59,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Data Viz - Tableau Portfolio</h2>
+										<p> My Tableau Portfolio</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
