--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">YANLIN CHEN</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -27,11 +27,11 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="DataViz.html">Home</a></li>
-								<li><a href="PredictiveAnalytics.html">Generic</a></li>
-								<li><a href="NLP.html">Elements</a></li>
-								<li><a href="CyberSecurity.html">Elements</a></li>
-								<li><a href="DataEngineering.html">Elements</a></li>
+								<li><a href="DataViz.html">Data Visualization</a></li>
+								<li><a href="PredictiveAnalytics.html">Predictive Analytics</a></li>
+								<li><a href="NLP.html">NLP</a></li>
+								<li><a href="CyberSecurity.html">Cyber Security</a></li>
+								<li><a href="DataEngineering.html">Data Engineering</a></li> 
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -40,7 +40,6 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>YANLIN CHEN's PORTFOLIO</h2>
 							<p>I made this website to share my ideas of Data Science, Machine Learning, Cyber Security.</p>
 								
@@ -58,7 +57,7 @@
 									<div class="content">
 										<h2 class="major">Data Viz - Tableau Portfolio</h2>
 										<p> My Tableau Portfolio</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="DataViz.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
