--- a/index.html
+++ b/index.html
@@ -69,26 +69,49 @@
 									<div class="content">
 										<h2 class="major">Predictive Analytics</h2>
 										<p>Predictive Analytics</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="PredictiveAnalytics.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
 
 						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Natural Language Processing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
+						<section id="three" class="wrapper spotlight style3">
+							<div class="inner">
+								<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+								<div class="content">
+									<h2 class="major">Natural Language Processing</h2>
+									<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+									<a href="NLP.html" class="special">Learn more</a>
 								</div>
-							</section>
-														
+							</div>
+						</section>	
+						
+						<!-- Five -->
+						<section id="five" class="wrapper alt spotlight style2">
+							<div class="inner">
+								<a href="#" class="image"><img src="images/PredictiveAnalytics.jpg" alt="" /></a>
+								<div class="content">
+									<h2 class="major">Cyber Security</h2>
+									<p>Cyber Security Cyber SecurityCyber SecurityCyber SecurityCyber SecurityCyber SecurityCyber SecurityCyber Security</p>
+									<a href="CyberSecurity.html" class="special">Learn more</a>
+								</div>
+							</div>
+						</section>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+						<!-- Six -->
+						<section id="six" class="wrapper spotlight style3">
+							<div class="inner">
+								<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+								<div class="content">
+									<h2 class="major">Data Engineering</h2>
+									<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+									<a href="DataEngineering.html" class="special">Learn more</a>
+								</div>
+							</div>
+						</section>								
+
+						<!-- Seven -->
+							<section id="seven" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Vitae phasellus</h2>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
