--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<a href="#" class="image"><img src="images/TableauDataViz.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Data Viz - Tableau Portfolio</h2>
-										<p> My Tableau Portfolio</p>
+										<p> My Tableau Portfolio My Tableau PortfolioMy Tableau PortfolioMy Tableau PortfolioMy Tableau PortfolioMy Tableau PortfolioMy Tableau PortfolioMy Tableau Portfolio</p>
 										<a href="DataViz.html" class="special">Learn more</a>
 									</div>
 								</div>
@@ -68,7 +68,7 @@
 									<a href="#" class="image"><img src="images/PredictiveAnalytics.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Predictive Analytics</h2>
-										<p>Predictive Analytics</p>
+										<p>Predictive Analytics Predictive AnalyticsPredictive AnalyticsPredictive AnalyticsPredictive AnalyticsPredictive AnalyticsPredictive Analytics</p>
 										<a href="PredictiveAnalytics.html" class="special">Learn more</a>
 									</div>
 								</div>
@@ -113,7 +113,7 @@
 						<!-- Seven -->
 							<section id="seven" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
+									<h2 class="major">HIGHLIGHT PROJECTS</h2>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
